chore: don't use real usernames for notifications
... it's just a test

--- a/.github/workflows/slash-commands.yml
+++ b/.github/workflows/slash-commands.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Determine variables
         id: vars
         run: |
-          maintainers=("xx-npalm-xx" "xx-kayman-mk-xx")
+          maintainers=("xx-maint1-xx" "xx-maint2-xx")
           
           RANDOM=$(date +%s)
           
