--- a/.github/workflows/open-pr.yml
+++ b/.github/workflows/open-pr.yml
@@ -5,23 +5,27 @@ on:
       - opened
 
 jobs:
-  test:
+  comment:
     runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
     steps:
-      - uses: mshick/add-pr-comment@v2
+      - uses: actions/github-script@v6
         with:
-          message: |
-            Hey @${{ github.event.pull_request.user.login }}! 👋
-            
-            Thank you for your contribution to the project. Please refer to the [contribution rules](blob/main/README.md) for a quick overview of the process.
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: |
+                Hey @${{ github.event.pull_request.user.login }}! 👋
 
-            The merge request description clearly explains:
-            
-            - the problem being solved
-            - the best way a reviewer and you can test your changes
+                Thank you for your contribution to the project. Please refer to the [contribution rules](blob/main/README.md) for a quick overview of the process.
 
-            With submitting this PR you confirm that you have the rights of the code added and agree that it will published under the [MIT license](blob/main/LICENSE.md)
+                The merge request description clearly explains:
 
-            _This message was generated automatically. You are welcome to [improve it](blob/main/LICENSE.md)._
+                - the problem being solved
+                - the best way a reviewer and you can test your changes
+
+                With submitting this PR you confirm that you have the rights of the code added and agree that it will published under the [MIT license](blob/main/LICENSE.md)
+
+                _This message was generated automatically. You are welcome to [improve it](blob/main/LICENSE.md)._
+            })
