--- a/.github/workflows/pr-commented.yml
+++ b/.github/workflows/pr-commented.yml
@@ -1,18 +1,20 @@
+---
 name: PR commented
+
 on:
   issue_comment:
     types:
       - created
 
 jobs:
-  slashCommandDispatch:
+  slash-command-dispatch:
     runs-on: ubuntu-latest
     steps:
       - name: Slash Command Dispatch
         uses: peter-evans/slash-command-dispatch@v3
         with:
-          # might need a PAT with public_repo scope
           token: ${{ secrets.GITHUB_TOKEN }}
           issue-type: pull-request
+          reactions: true
           commands: |
             help
