--- a/.github/workflows/pr-commented.yml
+++ b/.github/workflows/pr-commented.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   slash-command-dispatch:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - name: Slash Command Dispatch
         uses: peter-evans/slash-command-dispatch@v3
