--- a/.github/workflows/pr-commented.yml
+++ b/.github/workflows/pr-commented.yml
@@ -17,6 +17,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           issue-type: pull-request
-          reactions: true
+          reactions: false
           commands: |
             help
