--- a/.github/workflows/renovate-check.yml
+++ b/.github/workflows/renovate-check.yml
@@ -13,3 +13,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: suzuki-shunsuke/github-action-renovate-config-validator@v0.1.2
+      - uses: suzuki-shunsuke/github-action-renovate-config-validator@v0.1.2
+        with:
+          config_file_path: default.json
