--- a/.github/workflows/renovate-check.yml
+++ b/.github/workflows/renovate-check.yml
@@ -16,3 +16,6 @@ jobs:
       - uses: suzuki-shunsuke/github-action-renovate-config-validator@v0.1.2
         with:
           config_file_path: default.json
+      - uses: suzuki-shunsuke/github-action-renovate-config-validator@v0.1.2
+        with:
+          config_file_path: default1.json
