--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,1 +1,60 @@
 
+name: Lint files
+
+on:
+  pull_request:
+
+jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: dorny/paths-filter@v2.11.1
+        id: changes
+        with:
+          filters: |
+            json:
+              - '**/*.json'
+
+            markdown:
+              - '**/*.md'
+
+            renovate-config:
+              - '/renovate.json'
+              - '/default.json'
+
+            workflow:
+              - '.github/workflow/*'
+
+      - uses: actions/checkout@v2
+
+      - uses: suzuki-shunsuke/github-action-renovate-config-validator@v0.1.2
+        if: steps.changes.outputs.renovate-config == 'true'
+
+      # validates the default configuration included by all projects
+      - uses: suzuki-shunsuke/github-action-renovate-config-validator@v0.1.2
+        if: steps.changes.outputs.renovate-config == 'true'
+        with:
+          config_file_path: default.json
+
+      - runs-on: ubuntu-latest
+        if: steps.changes.outputs.workflow == 'true'
+        container:
+          image: rhysd/actionlint:1.6.22
+          options: --cpus 1 --user root
+        steps:
+          - uses: actions/checkout@v3
+          - name: Validate Github workflows
+            run: |
+              mkdir .git
+              actionlint -color
+
+      - name: Validate Markdown file
+        if: steps.changes.outputs.markdown == 'true'
+        run: |
+          npm install -g markdownlint-cli
+          markdownlint -c .markdownlint.yml -i CHANGELOG.md "**/*.md"
+
+      - name: Run JSON Lint
+        if: steps.changes.outputs.json == 'true'
+        steps:
+          - run: bash <(curl -s https://raw.githubusercontent.com/CICDToolbox/json-lint/master/pipeline.sh)
