--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -36,17 +36,18 @@ jobs:
         with:
           config_file_path: default.json
 
-      - runs-on: ubuntu-latest
+      - name: Install action-validator with asdf
+        uses: asdf-vm/actions/install@v1
         if: steps.changes.outputs.workflow == 'true'
-        container:
-          image: rhysd/actionlint:1.6.22
-          options: --cpus 1 --user root
-        steps:
-          - uses: actions/checkout@v3
-          - name: Validate Github workflows
-            run: |
-              mkdir .git
-              actionlint -color
+        with:
+          tool_versions: |
+            action-validator 0.1.2
+            
+      - name: Lint Actions
+        if: steps.changes.outputs.workflow == 'true'
+        run: |
+          find .github/workflows -type f \( -iname \*.yaml -o -iname \*.yml \) \
+            | xargs -I {} action-validator --verbose {}
 
       - name: Validate Markdown file
         if: steps.changes.outputs.markdown == 'true'
@@ -56,5 +57,4 @@ jobs:
 
       - name: Run JSON Lint
         if: steps.changes.outputs.json == 'true'
-        steps:
-          - run: bash <(curl -s https://raw.githubusercontent.com/CICDToolbox/json-lint/master/pipeline.sh)
+        run: bash <(curl -s https://raw.githubusercontent.com/CICDToolbox/json-lint/master/pipeline.sh)
