--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,4 +1,3 @@
-
 name: Lint files
 
 on:
@@ -37,23 +36,24 @@ jobs:
           config_file_path: default.json
 
       - name: Install action-validator with asdf
-        uses: asdf-vm/actions/install@v1
         if: steps.changes.outputs.workflow == 'true'
-        with:
-          tool_versions: |
-            action-validator 0.1.2
-            
-      - name: Lint Actions
-        if: steps.changes.outputs.workflow == 'true'
-        run: |
-          find .github/workflows -type f \( -iname \*.yaml -o -iname \*.yml \) \
-            | xargs -I {} action-validator --verbose {}
+        steps:
+          - uses: asdf-vm/actions/install@v1
+            name: Install action validator
+            with:
+              tool_versions: |
+                action-validator 0.1.2
 
+          - name: Lint Actions
+            run: |
+              find .github/workflows -type f \( -iname \*.yaml -o -iname \*.yml \) |\
+                xargs -I {} action-validator --verbose {}
+          
       - name: Validate Markdown file
         if: steps.changes.outputs.markdown == 'true'
         run: |
           npm install -g markdownlint-cli
-          markdownlint -c .markdownlint.yml -i CHANGELOG.md "**/*.md"
+          markdownlint -c .config/markdownlint.yml -i CHANGELOG.md "**/*.md"
 
       - name: Run JSON Lint
         if: steps.changes.outputs.json == 'true'
