--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -44,8 +44,7 @@ jobs:
 
       - name: Lint Actions
         run: |
-          find .github/workflows -type f \( -iname \*.yaml -o -iname \*.yml \) |\
-            xargs -I {} action-validator --verbose {}
+          find .github/workflows -type f \( -iname \*.yaml -o -iname \*.yml \) | xargs -I {} action-validator --verbose {}
           
       - name: Validate Markdown file
         if: steps.changes.outputs.markdown == 'true'
