--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
 
 jobs:
-  lint:
+  find-changes:
     runs-on: ubuntu-latest
     steps:
       - uses: dorny/paths-filter@v2.11.1
@@ -23,20 +23,45 @@ jobs:
 
             workflow:
               - '.github/workflow/*'
-
+    outputs:
+      json: steps.changes.outputs.json
+      markdown: steps.changes.outputs.markdown
+      renovate-config: steps.changes.outputs.renovate-config
+      workflow: steps.changes.outputs.workflow
+  
+  linter:
+    runs-on: ubuntu-latest
+    needs:
+      - find-changes
+    steps:
       - uses: actions/checkout@v2
 
       - uses: suzuki-shunsuke/github-action-renovate-config-validator@v0.1.2
-        if: steps.changes.outputs.renovate-config == 'true'
+        if: needs.find-changes.outputs.renovate-config == 'true'
 
       # validates the default configuration included by all projects
       - uses: suzuki-shunsuke/github-action-renovate-config-validator@v0.1.2
-        if: steps.changes.outputs.renovate-config == 'true'
+        if: needs.find-changes.outputs.renovate-config == 'true'
         with:
           config_file_path: default.json
 
+      - name: Validate Markdown file
+        if: needs.find-changes.outputs.markdown == 'true'
+        run: |
+          npm install -g markdownlint-cli
+          markdownlint -c .config/markdownlint.yml -i CHANGELOG.md "**/*.md"
+
+      - name: Run JSON Lint
+        if: needs.find-changes.outputs.json == 'true'
+        run: bash <(curl -s https://raw.githubusercontent.com/CICDToolbox/json-lint/master/pipeline.sh)
+
+  action-linter:
+    runs-on: ubuntu-latest
+    if: needs.find-changes.outputs.workflow == 'true'
+    needs:
+      - find-changes
+    steps:
       - name: Install action-validator with asdf
-        if: steps.changes.outputs.workflow == 'true'
         uses: asdf-vm/actions/install@v1
         with:
           tool_versions: |
@@ -44,14 +69,5 @@ jobs:
 
       - name: Lint Actions
         run: |
-          find .github/workflows -type f \( -iname \*.yaml -o -iname \*.yml \) | xargs -I {} action-validator --verbose {}
-          
-      - name: Validate Markdown file
-        if: steps.changes.outputs.markdown == 'true'
-        run: |
-          npm install -g markdownlint-cli
-          markdownlint -c .config/markdownlint.yml -i CHANGELOG.md "**/*.md"
-
-      - name: Run JSON Lint
-        if: steps.changes.outputs.json == 'true'
-        run: bash <(curl -s https://raw.githubusercontent.com/CICDToolbox/json-lint/master/pipeline.sh)
+          find .github/workflows -type f \( -iname \*.yaml -o -iname \*.yml \) |\
+             xargs -I {} action-validator --verbose {}
