--- a/.github/workflows/open-pr.yml
+++ b/.github/workflows/open-pr.yml
@@ -8,7 +8,7 @@ jobs:
   comment:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/github-script@v6
+      - uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # v6
         with:
           script: |
             github.rest.issues.createComment({
