--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,9 +17,9 @@ jobs:
       run:
         working-directory: ${{ matrix.directories }}
     steps:
-      - uses: actions/checkout@v3.3.0
+      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
 
-      - uses: hashicorp/setup-terraform@v2.0.3
+      - uses: hashicorp/setup-terraform@633666f66e0061ca3b725c73b2ec20cd13a8fdd1 # v2.0.3
         with:
           terraform_version: ${{ matrix.terraform }}
 
