--- a/.github/workflows/open-pr.yml
+++ b/.github/workflows/open-pr.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/github-script@v6
         with:
           script: |
-            console.log(github)
+            console.log(context)
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
