--- a/.github/workflows/open-pr.yml
+++ b/.github/workflows/open-pr.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # v6
         with:
-          script: >
+          script: |
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
