--- a/.github/workflows/open-pr.yml
+++ b/.github/workflows/open-pr.yml
@@ -16,16 +16,16 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: 'Hey @${{ github.event.pull_request.user.login }}! \
-                \
+                \n\n \
                 👋Thank you for your contribution to the project. Please refer to the [contribution rules](..//blob/main/CONTRIBUTION.md) \
                 for a quick overview of the process. \
-               \
-                Make sure that this PR clearly explains: \
-                - the problem being solved \
-                - the best way a reviewer and you can test your changes \
-                \
+               \n\n \
+                Make sure that this PR clearly explains: \n \
+                - the problem being solved \n \
+                - the best way a reviewer and you can test your changes \n \
+                \n \
                 With submitting this PR you confirm that you hold the rights of the code added and agree \
                 that it will published under the [Apache 2.0 license](/blob/main/LICENSE). \
-                \
+                \n\n \
                 This message was generated automatically. You are welcome to [improve it](/blob/main/.github/workflows/new-pr-opened.yml)._'
             })
