--- a/.github/workflows/open-pr.yml
+++ b/.github/workflows/open-pr.yml
@@ -4,9 +4,13 @@ on:
     types:
       - opened
 
+permissions: read-all
+
 jobs:
   comment:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # v6
         with:
