--- a/.github/workflows/open-pr.yml
+++ b/.github/workflows/open-pr.yml
@@ -10,7 +10,7 @@ jobs:
   comment:
     runs-on: ubuntu-latest
     permissions:
-      issues: write
+      pull-requests: write
     steps:
       - uses: actions/github-script@d556feaca394842dc55e4734bf3bb9f685482fa0 # v6
         with:
